avoid page jumping because of image loading

--- a/ng/src/app/components/home-page/home-page.component.scss
+++ b/ng/src/app/components/home-page/home-page.component.scss
@@ -18,7 +18,7 @@
 
     .image-section {
       z-index: 3;
-      img { max-height: 450px; }
+      img { max-height: 450px; min-height: 385px; }
     }
 
     .text-section {
